Replace all classNames, make sure that Document and Page components always render their wrappers

--- a/test/Test.less
+++ b/test/Test.less
@@ -98,8 +98,8 @@ body {
         border: 1px solid black;
         overflow: auto;
 
-        .ReactPDF {
-          &__Loader, &__Error, &__NoData {
+        .react-pdf {
+          &__message {
             padding: 20px;
           }
         }
@@ -112,7 +112,7 @@ body {
         background-color: rgb(82, 86, 89);
         overflow: auto;
 
-        .ReactPDF {
+        .react-pdf {
           &__Document {
             display: flex;
             flex-direction: column;
@@ -125,7 +125,7 @@ body {
             margin: 1em;
           }
 
-          &__Loader, &__Error, &__NoData {
+          &__message {
             padding: 20px;
             color: white;
           }
