--- a/sample/Sample.less
+++ b/sample/Sample.less
@@ -36,7 +36,7 @@ body {
     &__document {
       margin: 1em 0;
 
-      .ReactPDF {
+      .react-pdf {
         &__Document {
           display: flex;
           flex-direction: column;
@@ -54,7 +54,7 @@ body {
           }
         }
 
-        &__Loader, &__Error, &__NoData {
+        &__message {
           padding: 20px;
           color: white;
         }
