--- a/test/Test.less
+++ b/test/Test.less
@@ -95,6 +95,7 @@ body {
       &__toc {
         max-width: 100%;
         max-height: 16vh;
+        margin-bottom: 20px;
         border: 1px solid black;
         overflow: auto;
 
