Update ESLint, update ESLint config, configure Prettier, format all files using new config

--- a/sample/parcel/Sample.less
+++ b/sample/parcel/Sample.less
@@ -5,13 +5,14 @@ body {
 }
 
 .Example {
-  input, button {
+  input,
+  button {
     font: inherit;
   }
 
   header {
     background-color: rgb(50, 54, 57);
-    box-shadow: 0 0 8px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     padding: 20px;
     color: white;
 
@@ -44,8 +45,8 @@ body {
         }
 
         &__Page {
-          max-width: calc(~"100% - 2em");
-          box-shadow: 0 0 8px rgba(0, 0, 0, .5);
+          max-width: calc(~'100% - 2em');
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
           margin: 1em;
 
           canvas {
