--- a/src/Page/AnnotationLayer.css
+++ b/src/Page/AnnotationLayer.css
@@ -13,7 +13,7 @@
  * limitations under the License.
  */
 
- :root {
+:root {
   --annotation-unfocused-field-background: url("data:image/svg+xml;charset=UTF-8,<svg width='1px' height='1px' xmlns='http://www.w3.org/2000/svg'><rect width='100%' height='100%' style='fill:rgba(0, 54, 255, 0.13);'/></svg>");
 }
 
@@ -120,7 +120,7 @@
 .annotationLayer .buttonWidgetAnnotation.checkBox input:checked:after,
 .annotationLayer .buttonWidgetAnnotation.radioButton input:checked:before {
   background-color: rgba(0, 0, 0, 1);
-  content: "";
+  content: '';
   display: block;
   position: absolute;
 }
