--- a/src/Page/AnnotationLayer.css
+++ b/src/Page/AnnotationLayer.css
@@ -14,6 +14,7 @@
  */
 
 :root {
+  --react-pdf-annotation-layer: 1;
   --annotation-unfocused-field-background: url("data:image/svg+xml;charset=UTF-8,<svg width='1px' height='1px' xmlns='http://www.w3.org/2000/svg'><rect width='100%' height='100%' style='fill:rgba(0, 54, 255, 0.13);'/></svg>");
 }
 
