--- a/src/Page/TextLayer.css
+++ b/src/Page/TextLayer.css
@@ -13,6 +13,10 @@
  * limitations under the License.
  */
 
+:root {
+  --react-pdf-text-layer: 1;
+}
+
 .textLayer {
   position: absolute;
   text-align: initial;
