--- a/src/Page/TextLayer.css
+++ b/src/Page/TextLayer.css
@@ -53,7 +53,8 @@
   position: absolute;
   white-space: pre;
   cursor: text;
-  transform-origin: 0% 0%;
+  margin: 0;
+  transform-origin: 0 0;
 }
 
 /* Only necessary in Google Chrome, see issue 14205, and most unfortunately
