--- a/sample/vite/Sample.css
+++ b/sample/vite/Sample.css
@@ -1,10 +1,7 @@
 body {
   margin: 0;
   background-color: #525659;
-  font-family:
-    Segoe UI,
-    Tahoma,
-    sans-serif;
+  font-family: Segoe UI, Tahoma, sans-serif;
 }
 
 .Example input,
