Update pdfjs-dist to 4.6.82 (#1880)

--- a/packages/react-pdf/src/Page/TextLayer.css
+++ b/packages/react-pdf/src/Page/TextLayer.css
@@ -105,8 +105,9 @@
   user-select: none;
 }
 
-.textLayer .endOfContent.active {
+.textLayer.selecting .endOfContent {
   top: 0;
+  background: gray;
 }
 
 .hiddenCanvasElement {
